syntax = "proto3";

option csharp_namespace = "Wire";


message ContinueParams {
}


message PauseParams {
}

message CompProp {
    string type = 1;
    string value = 2;
}

message Component {
    string type = 1;
    string value = 2;
    repeated CompProp properties = 3;
}

message Entity {
   repeated Component components = 2;
}

message GetEntityParams {
    int32 entityId = 1;
}

message GetEntityResult {
    Entity entity = 1;
}

message GetEntityListParams {
    int64 startOffset = 1;
    int64 maxResults = 2;
}

message GetEntityListResult {
    int64 startOffset = 1;
    int64 nResults = 2;
    repeated int32 entityIds = 3;
}

enum EngineExecutionState
{
  Initialized = 0;
  Starting = 1;
  Running = 2;
  Stopping = 3;
  Stopped = 4;
}


message EngineExecutionStatus
{
	// TXWTODO: Since when?
  EngineExecutionState state = 1;
}

message EngineStateParams
{
}

service Svc {
  rpc Continue (ContinueParams) returns (EngineExecutionStatus);
  rpc Pause (PauseParams) returns (EngineExecutionStatus); 

  rpc GetEntity (GetEntityParams) returns (GetEntityResult);
  rpc GetEntityList (GetEntityListParams) returns (GetEntityListResult);
  rpc ReadEngineState(EngineStateParams) returns (stream EngineExecutionStatus);

  // rpc GetConfigVars (GetConfigVarsParams) returns {GetConfigVarsResult};
}